# rey

./: .gitignore  CMakeLists.txt  DIST.BAT  LICENSE  README.md  crey.sln  crey.vcxproj  crey.vcxproj.filters  main.c  main.cpp
.github/workflows/: build.yml  cmake.yml  ubuntu.yml
demos/: grid.cpp  reycollision.c  reytracing.c  reytracing.cpp  tetri.c  ui.c
include/: miniaudio.h  rand.h
include/arey/: arey.h
include/drey/: drey.h
include/grey/: grey.h  gui.h
include/mrey/: mrey.h
include/prey/: prey.h
lib/win32/: cglm.lib
lib/win64/: cglm.lib  chipmunk.lib
resources/: aeh.flac
rey/: CMakeLists.txt  grey.c  grey.h
rey/arey/: arey.h
rey/cpp/: grey.cpp  grey.hpp
rey/drey/: drey.c  drey.h
rey/grey/: grey  grey++  grey++.cpp  grey.c  grey.h  gui.c  gui.h  irey.h
rey/include/: OBJ_Loader.h  stb_vorbis.c
rey/include/arey/: arey.h  arey.hpp
rey/include/grey/: grey.h  grey.hpp  gui.h  menu.hpp
rey/include/grey/grey/: batch.h  batch_3d.h  color.h  font.h  keys.h  obj.hpp  shader.h  shaders.h  texture.h  texture_batch.h  vertices.h  window.h  window_flags.h
rey/include/mrey/: mrey.h
rey/include/prey/: prey.hpp
rey/mrey/: mrey.c  mrey.h
rey/prey/: prey  prey++  prey++.cpp  prey.c  prey.cpp  prey.h
rey/src/: CMakeLists.txt
rey/src/arey/: arey.cpp
rey/src/grey/: grey.c  grey.cpp  gui.c  menu.cpp
rey/src/grey/grey/: batch.c  batch_3d.c  color.c  font.c  obj.cpp  shader.c  shaders.c  texture.c  texture_batch.c  vertices.c  window.c
rey/src/mrey/: mrey.c
rey/src/prey/: prey.cpp
rey/tests/: CMakeLists.txt  tests.cpp
rey/tests/tests/: Ginit.cpp  Gwinclose.cpp  Gwincreate.cpp
src/: CMakeLists.txt  main.cpp
src/drey/: drey.c
src/grey/: grey.c  gui.c
src/mrey/: mrey.c
src/prey/: prey.cpp
